# fastapi-async

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  dependency.py  enum.py  models.py  schemas.py  settings.py
app/api/v1/: operations.py  users.py  wallets.py
app/repository/: operations.py  users.py  wallets.py
app/service/: exchange_service.py  operations.py  users.py  wallets.py
app/static/: index.html
app/static/js/: app.js
tests/: conftest.py
tests/test_api/: test_operations.py
