[tool.poetry]
name = "fastapi-async"
version = "0.1.0"
description = "Finance Tracker API built with FastAPI + SQLAlchemy (SQLite) with a small static UI."
authors = ["denzasikora-lab"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.125.0"
uvicorn = "0.38.0"
pydantic = "2.12.5"
sqlalchemy = "2.0.45"
requests = "2.32.5"
aiohttp = "3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
httpx = "0.28.1"
uv = "0.8.13"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

